feat: implement frontend architecture and components
- Add Docker configuration for development and production
- Set up Angular components for health check, CRUD operations, and services
- Implement base CRUD service and specific services for organizations, users, and permissions
- Configure routing and layout components
- Add environment configuration and proxy settings
- Update package dependencies and TypeScript configuration
- Remove server-side rendering files
- Add Nginx configuration for development and production environments

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,15 +2,16 @@
   "name": "frontend",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:frontend": "node dist/frontend/server/server.mjs"
+    "ng": "bunx ng",
+    "start": "bunx ng serve",
+    "build": "bunx ng build --ssr",
+    "watch": "bunx ng build --watch --configuration development",
+    "test": "bunx ng test",
+    "serve:ssr:frontend": "bun dist/frontend/main.server.mjs"
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^19.2.0",
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
@@ -20,6 +21,8 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.7",
+    "@types/cors": "^2.8.17",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -39,5 +42,9 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.7.2"
+  },
+  "type": "module",
+  "engines": {
+    "bun": ">=1.0.0"
   }
 }
