--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -9,5 +9,9 @@
   "include": [
     "src/**/*.ts",
     "src/**/*.d.ts"
+  ],
+  "exclude": [
+    "src/**/*.spec.ts",
+    "src/**/*.test.ts"
   ]
 }
