--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -48,7 +48,11 @@
                                     "maximumError": "4kb"
                                 }
                             ],
-                            "outputHashing": "all"
+                            "outputHashing": "all",
+                            "optimization": true,
+                            "extractLicenses": true,
+                            "sourceMap": false,
+                            "namedChunks": false
                         },
                         "development": {
                             "optimization": false,
