--- a/frontend/nginx/conf.d/prod.conf
+++ b/frontend/nginx/conf.d/prod.conf
@@ -2,22 +2,17 @@ server {
     listen 80;
     server_name localhost;
 
-    # Frontend Angular application (served from dist)
+    root /usr/share/nginx/html;
+    index index.html;
+
+    # Angular app
     location / {
-        root /usr/share/nginx/html;
         try_files $uri $uri/ /index.html;
-        index index.html;
-        
-        # Cache static assets
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
-            expires 1y;
-            add_header Cache-Control "public, no-transform";
-        }
     }
 
     # Backend API
     location /api {
-        proxy_pass http://backend:3000;
+        proxy_pass http://host.docker.internal:3000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
