--- a/frontend/tsconfig.spec.json
+++ b/frontend/tsconfig.spec.json
@@ -3,7 +3,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./out-tsc/spec",
+    "outDir": "./dist/out-tsc/spec",
     "types": [
       "jasmine",
       "node"
@@ -11,6 +11,6 @@
   },
   "include": [
     "src/**/*.spec.ts",
-    "src/**/*.d.ts"
+    "src/**/*.test.ts"
   ]
 }
